core: optimize speed limits loading